LAYOUT: Fixed the margins and padding on mobile view

--- a/css/layout.css
+++ b/css/layout.css
@@ -344,7 +344,6 @@ article a {
 		text-decoration:none;
 		text-align: left;
 	}
-		
 	}
 
 	/* All Mobile Sizes (devices and browser) */
@@ -355,4 +354,9 @@ article a {
 	@media only screen and (min-width: 480px) and (max-width: 767px) {}
 
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-	@media only screen and (max-width: 479px) {}
+	@media (max-width: 479px) {
+		article{
+			margin:0px;
+			padding:15px;
+		}
+	}
